[package]
name = "lazy-socket"
version = "0.1.2"
authors = ["Douman <douman@gmx.se>"]
description = "Low level Raw Socket API. WIP"
repository = "https://github.com/DoumanAsh/lazy-socket.rs"
documentation = "https://docs.rs/crate/lazy-socket/"
license = "MIT"
keywords = ["socket"]

[dependencies]

[target."cfg(unix)".dependencies]
libc = "^0.2.20"
