[package]
name = "lazy-socket"
version = "0.1.2"
authors = ["Douman <douman@gmx.se>"]
description = "Low level Raw Socket API. WIP"
repository = "https://github.com/DoumanAsh/lazy-socket.rs"
documentation = "https://docs.rs/crate/lazy-socket/"
license = "MIT"
keywords = ["socket"]

[dependencies]
bitflags = "^0.8"

[target."cfg(unix)".dependencies]
libc = "^0.2.20"

[target."cfg(windows)".dependencies]
kernel32-sys = "^0.2.2"
winapi       = "^0.2.8"
ws2_32-sys   = "^0.2.1"
